feat : add shelter mock data